--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node_hospital",
+  "name": "blogapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Blog de notícias",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,8 +18,10 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "mysql2": "^1.7.0",
-    "nodemon": "^2.0.1",
     "sequelize": "^5.21.0",
     "slugify": "^1.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
