--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "express-validator": "^6.4.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "mysql2": "^1.7.0",
